# rust_engine

./: Cargo.toml
src/: attack_table.rs  bitboard.rs  castle_rights.rs  eval.rs  fen.rs  game.rs  lib.rs  main.rs  move_gen.rs  move_list.rs  move_type.rs  mv.rs  perft.rs  phase.rs  piece.rs  piece_type.rs  position.rs  psqt.rs  score.rs  search.rs  side.rs  square.rs  state.rs  uci.rs  util.rs  wasm.rs
src/bitboard/: squares_between.rs
src/eval/: king_heuristics.rs  pawn_heuristics.rs
src/move_gen/: check_legal.rs  escape_check.rs  legal_check_preprocessing.rs  parallel.rs  pawn.rs  pseudo_legal.rs  slider.rs
src/mv/: castle.rs
src/search/: killer_mv_table.rs  tt.rs
src/state/: castle_rights.rs  position.rs  zobrist.rs
