[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_engine"
test = false

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subenum = "1.0.1"

[dev-dependencies]
unindent = "0.2.1"
rand = "0.8.5"
