[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_engine"
test = false

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[profile.dev]
debug = true
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subenum = "1.0.1"
wasm-bindgen = "0.2.74"
# fixedbitset =  "0.4.2"
js-sys = "0.3.64"
wasm-bindgen-test = "0.3.37"
console_error_panic_hook = "0.1.7"
getrandom = { features = ["js"] }
web-sys = { version = "0.3.64", features = ["console"] }

[dev-dependencies]
unindent = "0.2.1"
rand = "0.8.5"
